--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -30,11 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from gridsample.clustering import make_clusters\n",
     "from clustering.kmeans import custom_kmeans, get_oversized_clusters, run_optuna_kmeans_study, parallel_kmeans_secondpass"
    ]
   },
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "barangay_grids = gpd.read_parquet(\"./data/input/data.parquet\")  # \"PSGC\"==200902010"
+    "barangay_grids = gpd.read_parquet(\"../data/input/data.parquet\")  # \"PSGC\"==200902010"
    ]
   },
   {
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ecc39fe25b141c49e3df2339e3220e8",
+       "model_id": "1941c1966bf9470eb9ddee67ff31e5fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +229,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
