--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "barangay_grids = gpd.read_parquet(INPUT_DATA_DIR / \"data_201519013.parquet\")  #\"per_barangay\" / \"1303901372.parquet\""
+    "barangay_grids = gpd.read_parquet(INPUT_DATA_DIR / \"data_201519013.parquet\")"
    ]
   },
   {
@@ -97,6 +97,13 @@
     "\n",
     "\n",
     "def cluster_data(gdf_for_cluster):\n",
+    "\n",
+    "    if gdf_for_cluster[weight_col].sum() == 0:\n",
+    "        gdf_w_clusters = gdf_for_cluster.copy()\n",
+    "        gdf_w_clusters.loc[:, \"cluster_id\"] = \"CLUSTER_0\"\n",
+    "        gdf_w_clusters.loc[:, \"cluster_weight\"] = 0.0\n",
+    "        gdf_w_clusters.loc[:, \"dense_area_guess\"] = 0\n",
+    "        return gdf_w_clusters\n",
     "\n",
     "    # dynamic radius parameter\n",
     "    if gdf_for_cluster[\"urban\"].iloc[0]:\n",
@@ -191,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_w_clusters.sample(1000).plot(column=\"cluster_id\", figsize=(5, 5))"
+    "gdf_w_clusters.plot(column=\"cluster_id\", figsize=(5, 5))"
    ]
   }
  ],
