move non-clustering-related function out of clustering foldeer

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "from clustering.kmeans import custom_kmeans, get_oversized_clusters, run_optuna_kmeans_study, kmeans_secondpass #, parallel_kmeans_secondpass\n",
-    "from plotting import plot_weights_vs_radii"
+    "from utils import plot_weights_vs_radii"
    ]
   },
   {
