--- a/notebooks/HPLS_pre_processing.ipynb
+++ b/notebooks/HPLS_pre_processing.ipynb
@@ -35,7 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from clustering.utils import df_w_latlons_to_gdf, create_ids"
+    "from clustering.utils import create_ids\n",
+    "from utils import df_w_latlons_to_gdf"
    ]
   },
   {
