Move pivot function to utils for comprehension

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "barangay_grids = gpd.read_parquet(INPUT_DATA_DIR / \"data_201519013.parquet\")"
+    "barangay_grids = gpd.read_parquet(INPUT_DATA_DIR / \"data.parquet\")"
    ]
   },
   {
