DRAFT: Add temp refactor in a separate file

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from clustering.kmeans import custom_kmeans, get_oversized_clusters, run_optuna_kmeans_study, kmeans_secondpass #, parallel_kmeans_secondpass\n",
-    "from utils import plot_weights_vs_radii"
+    "from utils import plot_weights_vs_radii\n",
+    "from clustering.kmeans_new import get_optimised_kmeans_clusters_doublepass"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,118 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>population</th>\n",
-       "      <th>PSGC</th>\n",
-       "      <th>urban</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>grid_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>25119277</th>\n",
-       "      <td>8.0025</td>\n",
-       "      <td>125.380000</td>\n",
-       "      <td>0.144206</td>\n",
-       "      <td>1102305007</td>\n",
-       "      <td>True</td>\n",
-       "      <td>POINT (125.38000 8.00250)</td>\n",
-       "      <td>GRID_25119278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25119278</th>\n",
-       "      <td>8.0025</td>\n",
-       "      <td>125.380833</td>\n",
-       "      <td>0.146483</td>\n",
-       "      <td>1102305007</td>\n",
-       "      <td>True</td>\n",
-       "      <td>POINT (125.38083 8.00250)</td>\n",
-       "      <td>GRID_25119279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25119279</th>\n",
-       "      <td>8.0025</td>\n",
-       "      <td>125.381666</td>\n",
-       "      <td>0.140582</td>\n",
-       "      <td>1102305007</td>\n",
-       "      <td>True</td>\n",
-       "      <td>POINT (125.38167 8.00250)</td>\n",
-       "      <td>GRID_25119280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25119280</th>\n",
-       "      <td>8.0025</td>\n",
-       "      <td>125.382500</td>\n",
-       "      <td>0.144790</td>\n",
-       "      <td>1102305007</td>\n",
-       "      <td>True</td>\n",
-       "      <td>POINT (125.38250 8.00250)</td>\n",
-       "      <td>GRID_25119281</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25119281</th>\n",
-       "      <td>8.0025</td>\n",
-       "      <td>125.383333</td>\n",
-       "      <td>0.032313</td>\n",
-       "      <td>1102305007</td>\n",
-       "      <td>True</td>\n",
-       "      <td>POINT (125.38333 8.00250)</td>\n",
-       "      <td>GRID_25119282</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Lat         Lon  population        PSGC  urban  \\\n",
-       "25119277  8.0025  125.380000    0.144206  1102305007   True   \n",
-       "25119278  8.0025  125.380833    0.146483  1102305007   True   \n",
-       "25119279  8.0025  125.381666    0.140582  1102305007   True   \n",
-       "25119280  8.0025  125.382500    0.144790  1102305007   True   \n",
-       "25119281  8.0025  125.383333    0.032313  1102305007   True   \n",
-       "\n",
-       "                           geometry        grid_id  \n",
-       "25119277  POINT (125.38000 8.00250)  GRID_25119278  \n",
-       "25119278  POINT (125.38083 8.00250)  GRID_25119279  \n",
-       "25119279  POINT (125.38167 8.00250)  GRID_25119280  \n",
-       "25119280  POINT (125.38250 8.00250)  GRID_25119281  \n",
-       "25119281  POINT (125.38333 8.00250)  GRID_25119282  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# data_type = \"rooftops\"\n",
-    "data_type = \"grids\"\n",
+    "data_type = \"rooftops\"\n",
+    "# data_type = \"grids\"\n",
     "\n",
     "# runs\n",
     "n_jobs = 10\n",
@@ -208,7 +103,58 @@
     "    weight_importance_factor = 1\n",
     "    secondpass_cutoff_weight = 300\n",
     "\n",
-    "gdf_for_cluster.head()"
+    "gdf_for_cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusters_doublepass_gdf = get_optimised_kmeans_clusters_doublepass(\n",
+    "    gdf=gdf_for_cluster,\n",
+    "    lat_col=lat_col,\n",
+    "    lon_col=lon_col,\n",
+    "    weight_col=weight_col,\n",
+    "    epsg=epsg,\n",
+    "    desired_cluster_weight=desired_weight,\n",
+    "    max_cluster_weight = 40,\n",
+    "    desired_cluster_radius=desired_radius,\n",
+    "    weight_importance_factor=weight_importance_factor,\n",
+    "    doubplepass=True,\n",
+    "    initial_n_trials=firstpass_n_trials,\n",
+    "    secondpass_n_trials=secondpass_n_trials,\n",
+    "    show_progress_bar=True,\n",
+    "    return_type=\"gdf\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_weights_vs_radii(point_gdf_w_cluster=clusters_doublepass_gdf, point_weight_col=weight_col, point_projected_epsg=epsg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusters_doublepass_gdf[\"cluster_id\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[clusters_doublepass for clusters_doublepass in clusters_doublepass_gdf[\"cluster_id\"] if len(clusters_doublepass.split(\"_\")) == 3]"
    ]
   },
   {
@@ -222,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,31 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba88c180f91046e1869d78b5e1950a87",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/50 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Oversized clusters: 22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf_w_clusters = cluster_data(gdf_for_cluster)"
    ]
@@ -340,9 +264,11 @@
     "\n",
     "# grids - 69,226 points different weights (smaller n_clusters)\n",
     "# original: 17s\n",
+    "# new: 28s.....\n",
     "\n",
     "# rooftops - 17,367 points equal weight (much bigger n_clusters)\n",
-    "# original: 33s"
+    "# original: 33s\n",
+    "# new: 35s"
    ]
   },
   {
