add test plot code

--- a/notebooks/HPLS_post_processing.ipynb
+++ b/notebooks/HPLS_post_processing.ipynb
@@ -83,8 +83,8 @@
    "source": [
     "ROOT_DIR = Path(\"..\")\n",
     "INPUT_DATA_DIR = ROOT_DIR / \"data\" / \"output\" / \"lambda_processed\"\n",
-    "# OUTPUT_DATA_DIR = ROOT_DIR / \"data\" / \"output\"\n",
-    "OUTPUT_DATA_DIR = ROOT_DIR / \"data_hpls\" / \"02_modeloutputs\" / \"online\""
+    "OUTPUT_DATA_DIR = ROOT_DIR / \"data\" / \"output\"\n",
+    "# OUTPUT_DATA_DIR = ROOT_DIR / \"data_hpls\" / \"02_modeloutputs\" / \"online\""
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "# get cercle folderpaths for selected regions\n",
     "filepaths = list(INPUT_DATA_DIR.glob(\"*\"))\n",
-    "# filepaths = filepaths[:10]"
+    "filepaths = filepaths[:10]"
    ]
   },
   {
@@ -180,6 +180,18 @@
     "        \"dense_area_guess\",\n",
     "    ],\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "f, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
+    "cluster_gdf[cluster_gdf[\"PSGC\"]==604527012].plot(ax=ax)\n",
+    "grid_gdf[grid_gdf[\"PSGC\"]==604527012].plot(markersize=1, color=\"black\", alpha=1, ax=ax)"
    ]
   },
   {
