--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -109,9 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering\n",
-    "\n",
-    "- add option for dynamic radius selection back in"
+    "## Clustering"
    ]
   },
   {
@@ -121,7 +119,7 @@
    "outputs": [],
    "source": [
     "gdf_w_clusters = get_multipass_optimised_clusters(\n",
-    "    gdf=gdf_for_cluster,\n",
+    "    gdf=gdf_for_cluster.iloc[:1000],\n",
     "    lat_col=lat_col,\n",
     "    lon_col=lon_col,\n",
     "    weight_col=weight_col,\n",
@@ -148,7 +146,7 @@
     "plot_weights_vs_radii(\n",
     "    point_gdf_w_cluster=gdf_w_clusters,\n",
     "    point_weight_col=weight_col,\n",
-    "    point_projected_epsg=epsg,\n",
+    "    point_projected_epsg=projected_epsg,\n",
     ")"
    ]
   },
