MAJOR: Apply refactor and update Lambda code!

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "from utils import plot_weights_vs_radii\n",
-    "from clustering.kmeans_new import get_multipass_optimised_clusters"
+    "from clustering.kmeans import get_multipass_optimised_clusters"
    ]
   },
   {
