MAJOR: Refactor flagship function to a class called "TunedClustering" and other class-related cleanups.

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "from utils import plot_weights_vs_radii\n",
-    "from clustering.kmeans import get_multipass_optimised_clusters"
+    "from clustering.kmeans import TunedClustering"
    ]
   },
   {
@@ -118,21 +118,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_w_clusters = get_multipass_optimised_clusters(\n",
+    "optimised_clustering = TunedClustering(\n",
+    "    desired_cluster_weight=desired_cluster_weight,\n",
+    "    desired_cluster_radius=desired_cluster_radius,\n",
+    "    weight_importance_factor=weight_importance_factor,\n",
+    "    initial_max_trials=initial_max_trials,\n",
+    "    n_passes=n_passes,\n",
+    "    max_cluster_weight=max_cluster_weight,\n",
+    "    subsequent_max_trials=subsequent_max_trials,\n",
+    "    n_jobs=n_jobs,\n",
+    "    show_progress_bar=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_w_clusters = optimised_clustering.run(\n",
     "    gdf=gdf_for_cluster.iloc[:1000],\n",
     "    lat_col=lat_col,\n",
     "    lon_col=lon_col,\n",
     "    weight_col=weight_col,\n",
     "    projected_epsg=projected_epsg,\n",
-    "    desired_cluster_weight=desired_cluster_weight,\n",
-    "    desired_cluster_radius=desired_cluster_radius,\n",
-    "    weight_importance_factor=weight_importance_factor,\n",
-    "    initial_max_trials=initial_max_trials,\n",
-    "    n_jobs=n_jobs,\n",
-    "    n_passes=n_passes,\n",
-    "    subsequent_max_trials=subsequent_max_trials,\n",
-    "    max_cluster_weight=max_cluster_weight,\n",
-    "    show_progress_bar=True,\n",
     "    return_type=\"geodataframe\",\n",
     ")"
    ]
