--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -66,7 +66,7 @@
     "# runs\n",
     "n_jobs = -1\n",
     "initial_max_trials = 100\n",
-    "n_passes = 3\n",
+    "max_n_passes = 2\n",
     "subsequent_max_trials = 20\n",
     "\n",
     "# data-specific\n",
@@ -123,7 +123,7 @@
     "    desired_cluster_radius=desired_cluster_radius,\n",
     "    weight_importance_factor=weight_importance_factor,\n",
     "    initial_max_trials=initial_max_trials,\n",
-    "    n_passes=n_passes,\n",
+    "    max_n_passes=max_n_passes,\n",
     "    max_cluster_weight=max_cluster_weight,\n",
     "    subsequent_max_trials=subsequent_max_trials,\n",
     "    n_jobs=n_jobs,\n",
