DRAFT: Change n_cluster picker to normal distribution. Sigma scaler is set to 3 arbitrarily.

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -70,8 +70,8 @@
     "subsequent_max_trials = 20\n",
     "\n",
     "# data-specific\n",
-    "data_type = \"rooftops\"\n",
-    "# data_type = \"grids\"\n",
+    "# data_type = \"rooftops\"\n",
+    "data_type = \"grids\"\n",
     "\n",
     "if data_type == \"rooftops\":\n",
     "    gdf_for_cluster = gpd.read_parquet(INPUT_DATA_DIR / \"rooftops.parquet\")\n",
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "gdf_w_clusters = optimised_clustering.run(\n",
-    "    gdf=gdf_for_cluster.iloc[:1000],\n",
+    "    gdf=gdf_for_cluster,\n",
     "    lat_col=lat_col,\n",
     "    lon_col=lon_col,\n",
     "    weight_col=weight_col,\n",
