Swap to MiniBatch: minor speed-up and `reassignment_ratio` reclusters small clusters for us!

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "# data-specific\n",
     "data_type = \"rooftops\"\n",
-    "# data_type = \"grids\"\n",
+    "# data_type = \"grid_weights\"\n",
     "\n",
     "if data_type == \"rooftops\":\n",
     "    gdf_for_cluster = gpd.read_parquet(INPUT_DATA_DIR / \"rooftops.parquet\")\n",
@@ -157,7 +157,28 @@
     "    point_gdf_w_cluster=gdf_w_clusters,\n",
     "    point_weight_col=weight_col,\n",
     "    point_projected_epsg=projected_epsg,\n",
+    "    y_human_readable=data_type,\n",
+    "    output_filepath=OUTPUT_DATA_DIR / f\"{data_type}_minibatch_init1_reassignment0.10.png\", \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1m 44s for n_init=1 (classic)\n",
+    "\n",
+    "# changing MiniBatch reassignment_ratio\n",
+    "# 1m 41s for n_init=1 (minibatch, reassignment_ratio=0)\n",
+    "# 1m 38s for n_init=1 (minibatch, reassignment_ratio=0.01)\n",
+    "# 1m 31s for n_init=1 (minibatch, reassignment_ratio=0.05)\n",
+    "# 1m 28s for n_init=1 (minibatch, reassignment_ratio=0.10)\n",
+    "\n",
+    "# changing n_init\n",
+    "# 3m 15s for n_init=5 (classic)\n",
+    "# 2m 42 for n_init=5 (minibatch)"
    ]
   }
  ],
