--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimised_clustering = TunedClustering(\n",
+    "tuned_clustering = TunedClustering(\n",
     "    desired_cluster_weight=desired_cluster_weight,\n",
     "    desired_cluster_radius=desired_cluster_radius,\n",
     "    weight_importance_factor=weight_importance_factor,\n",
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_w_clusters = optimised_clustering.run(\n",
+    "gdf_w_clusters = tuned_clustering.run(\n",
     "    gdf=gdf_for_cluster,\n",
     "    lat_col=lat_col,\n",
     "    lon_col=lon_col,\n",
@@ -158,7 +158,7 @@
     "    point_weight_col=weight_col,\n",
     "    point_projected_epsg=projected_epsg,\n",
     "    y_human_readable=data_type,\n",
-    "    output_filepath=OUTPUT_DATA_DIR / f\"{data_type}_minibatch_init1_reassignment0.10.png\", \n",
+    "    # output_filepath=OUTPUT_DATA_DIR / f\"{data_type}_minibatch_init1_reassignment0.10.png\", \n",
     ")"
    ]
   },
