MAJOR: Change gdf into projected CRS and get x/y of centroids (in meters) internally. Removes lat/lon parameter. Will run faster and KMeans' euclidean distance metric will work as expected.

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -139,8 +139,6 @@
    "source": [
     "gdf_w_clusters = tuned_clustering.run(\n",
     "    gdf=gdf_for_cluster,\n",
-    "    lat_col=lat_col,\n",
-    "    lon_col=lon_col,\n",
     "    weight_col=weight_col,\n",
     "    projected_epsg=projected_epsg,\n",
     "    return_type=\"geodataframe\",\n",
@@ -158,7 +156,7 @@
     "    point_weight_col=weight_col,\n",
     "    point_projected_epsg=projected_epsg,\n",
     "    y_human_readable=data_type,\n",
-    "    # output_filepath=OUTPUT_DATA_DIR / f\"{data_type}_minibatch_init1_reassignment0.10.png\", \n",
+    "    # output_filepath=OUTPUT_DATA_DIR / f\"{data_type}_minibatch_init1_reassignment0.05_PROJECTED.png\", \n",
     ")"
    ]
   },
