Allow the user to set reassignment_ratio on TunedClustering

--- a/notebooks/HPLS_clustering.ipynb
+++ b/notebooks/HPLS_clustering.ipynb
@@ -87,6 +87,7 @@
     "    desired_cluster_weight = 30\n",
     "    max_cluster_weight = 50\n",
     "    weight_importance_factor = 1\n",
+    "    minibatch_reassignment_ratio = 0.1\n",
     "\n",
     "else:\n",
     "    gdf_for_cluster = gpd.read_parquet(INPUT_DATA_DIR / \"grids.parquet\")\n",
@@ -101,6 +102,7 @@
     "    desired_cluster_weight = 240\n",
     "    max_cluster_weight = 300\n",
     "    weight_importance_factor = 1\n",
+    "    minibatch_reassignment_ratio = 0.1\n",
     "\n",
     "gdf_for_cluster"
    ]
@@ -122,6 +124,7 @@
     "    desired_cluster_weight=desired_cluster_weight,\n",
     "    desired_cluster_radius=desired_cluster_radius,\n",
     "    weight_importance_factor=weight_importance_factor,\n",
+    "    minibatch_reassignment_ratio=minibatch_reassignment_ratio,\n",
     "    initial_max_trials=initial_max_trials,\n",
     "    max_passes=max_passes,\n",
     "    max_cluster_weight=max_cluster_weight,\n",
